<resources>
    <string name="app_name">My Application</string>
    <string name="enter_server_ip">Enter Server IP :</string>
    <string name="enter_port_number">Enter Port Number:</string>
    <string name="disconnect_to_server">Disconnect to Server!</string>
    <string name="connect_to_server">Connect to Server!</string>
    <string name="throttle">Throttle</string>
    <string name="rudder">rudder</string>
</resources>