<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                  type="com.example.myapplication.ViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_server_ip"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:id="@+id/server_ip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintEnd_toStartOf="@+id/server_ip_input"
                app:layout_constraintBottom_toBottomOf="@+id/server_ip_input"
                app:layout_constraintTop_toTopOf="@+id/server_ip_input"/>
        <EditText
                android:layout_width="241dp"
                android:layout_height="45dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/server_ip_input"
                android:text="@={viewModel.ip}"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/enter_port_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/port_num"
                app:layout_constraintStart_toStartOf="@+id/server_ip"
                android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/server_ip"
        />
        <EditText
                android:layout_width="243dp"
                android:layout_height="45dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/port_num_input"
                android:text="@={viewModel.port}"
                app:layout_constraintStart_toStartOf="@+id/server_ip_input"
                app:layout_constraintTop_toTopOf="@+id/port_num"
                app:layout_constraintBottom_toBottomOf="@+id/port_num" app:layout_constraintVertical_bias="0.461"/>
        <Button
                android:text="@string/connect_to_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connect_button"
                android:onClick="@{() -> viewModel.connect()}"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/port_num_input" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.437"
                app:layout_constraintVertical_bias="0.036"/>
        <Button
                android:text="@string/disconnect_to_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/disconnect_button"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/port_num_input" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp" app:layout_constraintHorizontal_bias="0.419"
                app:layout_constraintVertical_bias="0.038" android:visibility="invisible"/>
        <ImageView
                android:layout_width="330dp"
                android:layout_height="323dp" app:srcCompat="@drawable/joystick" android:id="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="92dp" app:layout_constraintHorizontal_bias="0.654"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/joystickcenter"
                android:id="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView" app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.492" app:layout_constraintVertical_bias="0.48"/>
        <SeekBar
                android:layout_width="378dp"
                android:layout_height="23dp" android:id="@+id/seekBar"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/imageView"
                android:layout_marginBottom="68dp"
                android:progress=""
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <TextView
                android:text="@string/throttle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/seekBar" android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/connect_button"
                app:layout_constraintVertical_bias="0.328" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>